Fix scroll shifting?

--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,7 @@ td {
 }
 
 .name-selection-button {
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
